# htcs

./: .gitattributes  .gitignore  .gitmodules  Architecture.drawio  LICENSE  README.md  Team2_ProjectIdea_RTOS_2020.docx  Untitled Diagram.drawio  demo_help.drawio  visu.py
htcs-vehicle/: CMakeLists.txt  README.md  build.sh  htcs-vehicle.sln  htcs-vehicle.vcxproj  htcs-vehicle.vcxproj.filters  install_submodules.sh  run.sh  vehicle-generator.sh
htcs-vehicle/src/: command.c  command.h  main.c  mqtt.c  mqtt.h  mutex.c  mutex.h  options.c  options.h  scheduler.c  scheduler.h  state.c  state.h
mqtt-gcloud/: CMakeLists.txt  build.sh  install_submodules.sh  iot_mqtt_jwt.h  main.c  mqtt.c  mqtt.h  options.c  pull_submodules.sh
python/: HTCSPythonUtil.py  README.md  car.py  connection.properties  generator.py  htcs-controller.py  htcs_controller.py  hungarian.py  mqtt_connector.py  requirements.txt  scenarios.py  template_connection.properties  terminator.py  visu.py  visu_res.py
